# cocus_challenge_2024

./: .pre-commit-config.yaml  README.md  app.py  pyproject.toml
app/: __init__.py  routes.py
app/services/: file_manager.py  text_manager.py
app/static/: index.css
app/templates/: index.html
config/: constants.py  validations.py
templates/: index.html
tests/: test_file_manager.py  test_routes.py  test_text_manager.py  test_uploads.py
tests/data/: allowed_text.txt  big_allowed_text.txt  empty_text.txt  max_size_text.txt
